# srfc-21-nested-account-resolution

./: Anchor.toml  README.md  jest.config.js  package.json  tsconfig.json
additional-accounts-request/: Cargo.toml
additional-accounts-request/src/: lib.rs
archive/: hydra-test.ts  lut-manager-test.ts
archive/hydra_generic/: Cargo.toml
archive/hydra_generic/src/: lib.rs
archive/hydra_generic/src/processor/: initialize.rs
archive/lut_manager/src/: lib.rs
programs/benchmark-aar/: Cargo.toml
programs/benchmark-aar-callee/: Cargo.toml
programs/benchmark-aar-callee/src/: lib.rs
programs/benchmark-aar-callee/src/processor/: mod.rs  transfer_linked_list.rs
programs/benchmark-aar-callee/src/state/: node.rs
programs/benchmark-aar-caller/: Cargo.toml
programs/benchmark-aar-caller/src/: lib.rs
programs/benchmark-aar-caller/src/interface/: instructions.rs
programs/benchmark-aar-caller/src/processor/: transfer.rs
programs/benchmark-aar/src/: lib.rs
programs/callee/: Cargo.toml
programs/callee/src/: lib.rs
programs/callee/src/interface/: instructions.rs  meta.rs
programs/callee/src/processor/: add_keypair_node.rs  add_pda_node.rs  close_linked_list.rs  create_linked_list.rs  create_ownership_list.rs  init_linked_list_head_node.rs  mod.rs  return_data.rs  transfer_linked_list.rs  transfer_ownership_list.rs
programs/callee/src/state/: mod.rs  ownership_list.rs
programs/caller/: Cargo.toml
programs/caller-wrapper/: Cargo.toml
programs/caller-wrapper/src/: lib.rs
programs/caller-wrapper/src/interface/: instructions.rs
programs/caller-wrapper/src/processor/: transfer.rs
programs/caller/src/: lib.rs
programs/caller/src/interface/: instructions.rs  mod.rs
programs/caller/src/processor/: mod.rs  return_data.rs  swap.rs  transfer.rs
programs/libreplex_manager/: Cargo.toml
programs/libreplex_manager/src/: lib.rs  program_keys.rs
programs/libreplex_manager/src/processor/: deploy.rs  initialize.rs  mod.rs
programs/lut_manager/: Cargo.toml
programs/nested-account-resolution/: Cargo.toml
programs/nested-account-resolution/src/: lib.rs
programs/universal-mint/: Cargo.toml
programs/universal-mint/src/: lib.rs
programs/universal-mint/src/processor/: create_spl_token.rs  create_spl_token_extension.rs  create_spl_token_extension_metadata.rs  describe.rs  mod.rs  transfer_token.rs
programs/universal-mint/src/processor/spl_token_metadata/: emitter.rs  initialize_account.rs  mod.rs  remove_key_ix.rs  update_the_authority.rs  updating_field.rs
programs/universal-mint/src/state/: metadata_info.rs  mod.rs
tests/: additionalAccountsRequest.ts  bankrun.ts  nested-account-resolution.ts  sendTransaction.ts  universal-mint-test.ts
tests/lib/: additionalAccountsRequest.ts  interface.ts  sendTransaction.ts  utils.ts
