[package]
name = "additional-accounts-request"
version = "0.1.0"
edition = "2021"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/ngundotra/srfc-21-nested-account-resolution"
description = "A Rust library that facilitates the request of additional accounts in Solana programs"
license = "Apache-2.0"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
bytemuck = "1.8.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
