[package]
name = "additional-accounts-request"
version = "0.1.0"
edition = "2021"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/ngundotra/srfc-21-nested-account-resolution"
description = "A Rust library that facilitates the request of additional accounts in Solana programs"
license = "Apache-2.0"

[dependencies]
anchor-lang = { git = "https://www.github.com/ngundotra/anchor", branch = "namespaced-ixs", features = [
    "event-cpi",
    "interface-instructions",
] }
anchor-spl = { git = "https://www.github.com/coral-xyz/anchor" }
bytemuck = "1.8.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
