[package]
name = "hydra_generic"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_generic"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bytemuck = "1.8.0"
additional-accounts-request = { path = "../../additional-accounts-request" }

[profile.release]
overflow-checks = true # Enable integer overflow checks.
