[package]
name = "benchmark-aar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "benchmark_aar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.28.0", features=["event-cpi"]}
additional-accounts-request = { version = "0.1.0", path = "../../additional-accounts-request"}
bytemuck = "1.8.0"