[package]
name = "caller-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "caller_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
caller = { version = "0.1.0", path = "../caller", features=["no-entrypoint"] }
additional-accounts-request = { version = "0.1.0", path = "../../additional-accounts-request" }
bytemuck = "1.8.0"
