[package]
name = "caller"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "caller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { git = "https://www.github.com/ngundotra/anchor", branch = "namespaced-ixs" }
callee = { version = "0.1.0", path = "../callee", features = ["no-entrypoint"] }
additional-accounts-request = { version = "0.1.0", path = "../../additional-accounts-request" }
bytemuck = "1.8.0"
