[package]
name = "libreplex_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://www.github.com/ngundotra/anchor", branch = "namespaced-ixs" }
anchor-spl = { git = "https://www.github.com/ngundotra/anchor", branch = "namespaced-ixs" }
bytemuck = "1.8.0"
solana-program = { version = "~1.17" }
additional-accounts-request = { path = "../../additional-accounts-request" }
# Too hard to setup bc solana-program versioning issues, building ix myself
# libreplex_fair_launch = { version = "0.1.0", features = [
#     "no-entrypoint",
# ], git = "https://github.com/LibrePlex/libreplex-program-library" }
