[package]
name = "universal-mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "universal_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
bytemuck = "1.8.0"
spl-token-metadata-interface = "0.2.0"
additional-accounts-request = { path = "../../additional-accounts-request" }
